src/test/ui/impl-trait/issues/issue-21659-show-relevant-trait-impls-3.stderr
error[E0599]: no method named `foo` found for struct `Bar` in the current scope
  --> $DIR/issue-21659-show-relevant-trait-impls-3.rs:20:8
   |
LL | trait Foo<A> {
   | ------------ `Foo` defines an item `foo`
...
LL | struct Bar;
   | ----------- method `foo` not found for this
...
LL |     f1.foo(1usize);
   |        ^^^ method not found in `Bar`
   |
   = help: items from traits can only be used if the trait is implemented and in scope

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
